fixed tooltips and spacing

--- a/public/layout/sass/_editing.scss
+++ b/public/layout/sass/_editing.scss
@@ -275,7 +275,7 @@
     }
     
     form.task-info {
-        margin: 0 0 30px 0;
+        margin: 0 0 20px 0;
     }
 
     input.task-title {
@@ -352,7 +352,6 @@
     }
 
     .tags {
-        margin: 0 0 10px 0;
         @include input-placeholders;
 
         .tag-pool {
@@ -421,8 +420,8 @@
                     clear: both;
                     padding: 0 0 40px 0;
                     
-                    &:nth-child(3) {
-                        padding: 0;
+                    &.tags {
+                        padding: 0 0 30px 0;
                     }
 
                     .container-left {
@@ -433,6 +432,10 @@
                         .create-project-tooltip {
                             float: left;
                         }
+
+                        &.topics {
+                            margin: 32px 0 0 0;
+                        }
                     }
 
                     .container-right {
@@ -441,9 +444,9 @@
                         position: relative;
 
                         .topic-delete {
-                            position: absolute;
+                            position: relative;
                             left: 575px;
-                            top: 0;
+                            top: 25px;
                             color: $fg-grey-placeholder;
 
                             &:hover {
